--- a/css/main.css
+++ b/css/main.css
@@ -51,11 +51,14 @@ body {
     padding: 50px;
     transition: all .2s ease;
 }
-.keyboard.wait  { background: #2c3e50; }
+.keyboard.wait {
+    background: #2c3e50;
+}
 
 .line {
     margin-bottom: 20px;
 }
+
 .key {
     display: inline-block;
     width: 50px;
@@ -77,7 +80,6 @@ body {
 .key.space {
     width: 400px;
 }
-
 .key.pressed {
     box-shadow: none;
     background: #7f8c8d;
