add space in the end of page

--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,7 @@ footer {
     font-weight: 300;
     text-align: center;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 footer a {
     color: inherit;
