--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,16 @@ body {
 .hud .best {
     float: right;
 }
-
+.hud .tt {
+    display: block;
+    float: right;
+    margin-top: -5px;
+    margin-left: 10px;
+}
+.hud .tt path:hover {
+    fill: #55acee!important;
+    transition: all .2s ease;
+}
 /*
   ----------------------------------------
     Author
