Change keys color

--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ body {
     height: 50px;
     border-radius: 5px;
     background: #bdc3c7;
-    color: #ecf0f1;
+    color: #222;
     text-transform: uppercase;
     padding-top: 10px;
     box-shadow: 0 5px 0px 0 #7f8c8d;
